--- a/style1.css
+++ b/style1.css
@@ -50,10 +50,10 @@ a{
   text-decoration: none;
 }
 
-a.avm:visited{
+a.avm{
   color: DarkSlateGray;
 }
 
-a.ahm:visited{
+a.ahm{
   color: Ivory;
 }
