--- a/vermenu.css
+++ b/vermenu.css
@@ -9,12 +9,13 @@ body{
   width: 100%;
   height: 100%;
   margin: 0px;
+	background-color:#9162e4;
 }
 
 nav{
   float: left;
   border 3px red solid;
-  background-color: #5e35b1;
+  background-color:#280680;
   width: 25%;
   height: 100%;
   padding: 10px;
@@ -48,13 +49,13 @@ main{
 }
 
 header{
-  background-color: #280680;
+  background-color:#5e35b1;
   margin: 0px;
   display: inline-block;
 }
 
 footer{
-  background-color: #280680;
+  background-color:#5e35b1;
   display: inline-block;
 }
 
@@ -67,4 +68,7 @@ color:white;
 img{
 	width:300px;
 	height:300px;
+}
+p{
+background-color:white;
 }
