--- a/vermenu.css
+++ b/vermenu.css
@@ -18,6 +18,12 @@ nav{
   width: 25%;
   height: 100%;
   padding: 2%;
+	  padding: 5px;
+  color:white;
+text-align:center;
+background-color:#9162e4;
+border: 2px solid white;
+border-radius:15px;
 }
 
 h1{
@@ -80,5 +86,6 @@ text-size:75px;
 
 p{
 color:white;
+	text-font:times New Roman;
 }
 
